# tdnf

./: .travis.yml  CMakeLists.txt
.github/workflows/: ccpp.yml
ci/: Dockerfile.fedora  Dockerfile.photon
client/: api.c  config.c  defines.h  goal.c  gpgcheck.c  includes.h  plugins.c  prototypes.h  remoterepo.c  repo.c  repogpgcheck.c  repolist.c  repoutils.c  rpmtrans.c  structs.h  utils.c
common/: prototypes.h  setopt.c  utils.c
include/: tdnf.h  tdnfclitypes.h  tdnferror.h  tdnfplugin.h  tdnftypes.h
plugins/: CMakeLists.txt
plugins/repogpgcheck/: CMakeLists.txt  api.c  config.h  defines.h  includes.h  prototypes.h  repogpgcheck.c
tools/cli/: defines.h  main.c  prototypes.h
tools/cli/lib/: installcmd.c  parseargs.c
